--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port = 666
+server.port = 8081
 spring.datasource.url = jdbc:postgresql://localhost:5432/ecommerce
 spring.datasource.username = postgres
 spring.datasource.password = 12345678
 spring.jpa.hibernate.ddl-auto = update
-
+spring.datasource.initialization-mode= always
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
